// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LimitCustomMarketPriceButton renders the custom amount correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: unset;
}

.c1 {
  width: unset;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 1px;
}

.c2 {
  background-color: #22222212;
  color: #222222;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 999px 0px 0px 999px;
  border-top: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-right: 1px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c2:hover {
  opacity: 0.6;
}

.c2:active {
  opacity: 0.4;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  background-color: #22222212;
  color: #7D7D7D;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 6px 6px 6px 4px;
  height: 24px;
  border-radius: 0px 999px 999px 0px;
  border-top: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-right: 1px solid #22222212;
  border-left: 1px solid transparent;
}

.c3:hover {
  opacity: 0.6;
}

.c3:active {
  opacity: 0.4;
}

<div
  class="c0 c1"
  width="unset"
>
  <button
    class="c2"
  >
    <span>
      +
      10%
    </span>
  </button>
  <button
    class="c3"
  >
    <svg
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="18"
        x2="6"
        y1="6"
        y2="18"
      />
      <line
        x1="6"
        x2="18"
        y1="6"
        y2="18"
      />
    </svg>
  </button>
</div>
`;

exports[`LimitCustomMarketPriceButton renders the custom amount correctly, negative change 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: unset;
}

.c1 {
  width: unset;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 1px;
}

.c2 {
  background-color: #22222212;
  color: #222222;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 999px 0px 0px 999px;
  border-top: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-left: 1px solid #22222212;
  border-right: 1px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c2:hover {
  opacity: 0.6;
}

.c2:active {
  opacity: 0.4;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  background-color: #22222212;
  color: #7D7D7D;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  padding: 6px 6px 6px 4px;
  height: 24px;
  border-radius: 0px 999px 999px 0px;
  border-top: 1px solid #22222212;
  border-bottom: 1px solid #22222212;
  border-right: 1px solid #22222212;
  border-left: 1px solid transparent;
}

.c3:hover {
  opacity: 0.6;
}

.c3:active {
  opacity: 0.4;
}

<div
  class="c0 c1"
  width="unset"
>
  <button
    class="c2"
  >
    <span>
      -10%
    </span>
  </button>
  <button
    class="c3"
  >
    <svg
      fill="none"
      height="12"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="18"
        x2="6"
        y1="6"
        y2="18"
      />
      <line
        x1="6"
        x2="18"
        y1="6"
        y2="18"
      />
    </svg>
  </button>
</div>
`;

exports[`LimitPresetPriceButton renders 0 correctly, disabled false and selected false 1`] = `
.c0 {
  background-color: unset;
  color: #7D7D7D;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-radius: 999px;
  border: 1px solid #22222212;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Current
</button>
`;

exports[`LimitPresetPriceButton renders 0 correctly, disabled false and selected true 1`] = `
.c0 {
  background-color: unset;
  color: #222222;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 999px;
  border: 1px solid #22222212;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  Current
</button>
`;

exports[`LimitPresetPriceButton renders 0 correctly, disabled true and selected false 1`] = `
.c0 {
  background-color: unset;
  color: #7D7D7D;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-radius: 999px;
  border: 1px solid #22222212;
}

<button
  class="c0"
>
  Current
</button>
`;

exports[`LimitPresetPriceButton renders 5 correctly, disabled false and selected true 1`] = `
.c0 {
  background-color: unset;
  color: #222222;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 999px;
  border: 1px solid #22222212;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  <span>
    +
    5%
  </span>
</button>
`;

exports[`LimitPresetPriceButton renders 5 correctly, disabled true and selected false 1`] = `
.c0 {
  background-color: unset;
  color: #7D7D7D;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-radius: 999px;
  border: 1px solid #22222212;
}

<button
  class="c0"
>
  <span>
    +
    5%
  </span>
</button>
`;

exports[`LimitPresetPriceButton renders 10 correctly, disabled false and selected true 1`] = `
.c0 {
  background-color: unset;
  color: #222222;
  padding: 2px 8px;
  height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 999px;
  border: 1px solid #22222212;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c0:hover {
  opacity: 0.6;
}

.c0:active {
  opacity: 0.4;
}

<button
  class="c0"
>
  <span>
    +
    10%
  </span>
</button>
`;
